// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`giving specifioc props to button 1`] = `
<button
  className="btn large"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  This is button
</button>
`;

exports[`renders without crashing 1`] = `
<button
  className="btn"
  disabled={false}
  onClick={[Function]}
  type="button"
/>
`;
